[#12] Added tests and Doc