@@ -4,11 +4,15 @@ import com.github.jayreturns.slserver.transaction.domain.Transaction;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class TransactionDataFactory {
 
+    /**
+     * Converts {@link Transaction} to {@link TransactionData}
+     * @param transaction The Transaction to convert
+     * @return The converted {@link TransactionData}
+     */
     public TransactionData from(Transaction transaction) {
         TransactionData transactionData = new TransactionData();
 
@@ -22,10 +26,15 @@ public class TransactionDataFactory {
         return transactionData;
     }
 
+    /**
+     * Convert a list of {@link Transaction} to a list of {@link TransactionData}
+     * @param transactions The list to convert
+     * @return The converted List of {@link TransactionData}
+     */
     public List<TransactionData> from(List<Transaction> transactions) {
         return transactions.stream()
                 .map(this::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
